tests/ui/module-macro_use-arguments.rs
#[macro_use(foo, bar)] //~ ERROR arguments to `macro_use` are not allowed here
mod foo {
}

fn main() {
}
